<?xml version="1.0"?>
<package format="3">
  <name>ur5_teaching_cpp</name>
  <version>0.1.0</version>
  <description>C++ MoveIt example for UR5.</description>
  <maintainer email="chenyeke@zju.edu.cn">Yeke Chen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
